got rid of (probably only some) left over ubuntu crap in bashrc

--- a/.w3m/history
+++ b/.w3m/history
@@ -7,3 +7,4 @@ file:///srv/http/global/pub/error/alt/505.html
 file:///srv/http/global/pub/error/404.html
 file:///srv/http/global/pub/error/505.html
 http://www.google.com/
+file:///$LIB/w3mbookmark
