--- a/.w3m/history
+++ b/.w3m/history
@@ -6,5 +6,7 @@ file:///srv/http/global/pub/error/alt/404.html
 file:///srv/http/global/pub/error/alt/505.html
 file:///srv/http/global/pub/error/404.html
 file:///srv/http/global/pub/error/505.html
+http://shearer.org/MTA_Comparison
+file:///home/jzacsh/google.com
 http://www.google.com/
 file:///$LIB/w3mbookmark
