vim syntax highlighting drupal .inc files; diff PS1 colors for diff machines

--- a/.w3m/history
+++ b/.w3m/history
@@ -6,7 +6,10 @@ file:///srv/http/global/pub/error/alt/404.html
 file:///srv/http/global/pub/error/alt/505.html
 file:///srv/http/global/pub/error/404.html
 file:///srv/http/global/pub/error/505.html
-http://shearer.org/MTA_Comparison
 file:///home/jzacsh/google.com
 http://www.google.com/
 file:///$LIB/w3mbookmark
+http://github.com/falconindy/serv/blob/master/serv.c
+file:///home/jzacsh/www.github.com/falconindy/
+http://github.com/falconindy/
+http://shearer.org/MTA_Comparison
