added claspath of comp171 src/ dir

--- a/.w3m/history
+++ b/.w3m/history
@@ -9,8 +9,18 @@ file:///srv/http/global/pub/error/505.html
 file:///home/jzacsh/google.com
 http://www.google.com/
 file:///$LIB/w3mbookmark
-http://github.com/falconindy/serv/blob/master/serv.c
 file:///home/jzacsh/www.github.com/falconindy/
 http://github.com/falconindy/
 http://shearer.org/MTA_Comparison
-http://checkip.dyndns.org/
+http://github.com/falconindy/serv/blob/master/serv.c
+https://www.dropbox.com/login?cont=https%3A//www.dropbox.com/cli_link%3Fhost_id%3D4600576ccd28c3e0875fe321875c53db
+file:///home/jzacsh/Dropbox
+http://wiki.archlinux.org/index.php/Msmtp
+http://www.jzacsh.com/sketchrack
+https://www.dropbox.com/login?cont=https%3A//www.dropbox.com/cli_link%3Fhost_id%3Dfd137c8dca32b0a8cb852621a237336c
+https://www.dropbox.com/login
+http://en.wikipedia.org/wiki/List_of_tz_zones_by_name
+http://brookdalecc.edu/pages/972.asp
+http://brookdalecc.edu/MSDocs/Computer%20Science/Fall%202009%20Syllabi/COMP%20225%20Syllabus-Fall%2009.doc
+http://paste.pocoo.org/raw/262230/
+http://dl.dropbox.com/u/128640/tdbank
