forgot to document the private, non-public files.

--- a/.jzacsh.md
+++ b/.jzacsh.md
@@ -50,4 +50,8 @@ type -p easy_install
 sudo easy_install http://closure-linter.googlecode.com/files/closure_linter-latest.tar.gz
 
 sudo npm install -g jshint PrettyCSS karma phantomjs grunt gulp
+
+# Stuff that can't be public or automated
+printf 'Copy from some other machine or backup the following:\n%s\n' \
+    '.ssh/config/*' '.aws/config'
 ``` 
