some global system installs; some home directory happiness

--- a/.jzacsh.md
+++ b/.jzacsh.md
@@ -24,6 +24,11 @@ cd vcprompt* &&
     ./configure &&
     make &&
     mv -v vcprompt ~/bin/local
+cp -v back/dots/user-dirs.dirs .
+echo 'WARNING: watch this output and delete old versions of these!!'
+while read line ; do
+  [[ $line =~ ^XDG ]] && mkdir -p "${line/XDG*=/}"
+done < user-dirs.dirs
 
 # Unpack my bag o dots:
 mkdir -p back/dots && \
@@ -44,6 +49,9 @@ mkdir ~/.vim/bundle &&
 npm --version && npm --version
 
 # all below could just as well in ~/bin/local/ (rather than sudo/`-g` global)
+
+# s/apt-get/whatever-package-mgr/
+sudo apt-get install tmux irssi htop
 
 # system-check: ensure something sensible comes out
 type -p easy_install
