some fixes to basics

--- a/.jzacsh.md
+++ b/.jzacsh.md
@@ -5,6 +5,8 @@ This list is packaged safely with my dotfiles, so I have a nearby sanity list
 to check when I'm creating a username on a new machine. Usually a new username
 installation looks like this, for me:
 ```bash
+set -x
+
 (( BASH_VERSINFO[0] < 4 )) &&
     echo 'holy shit, scratch everything else in this checklist...' >&2
 
@@ -13,22 +15,25 @@ cd  # home dir
 # system-check: ensure something sensible comes out
 git --version
 
-# Unpack my bag o scripts:
-git clone http://github.com/jzacsh/bin && mkdir bin/local
-mkdir -p tmp/{build,src} && pushd tmp/build
-curl -O http://hg.gerg.ca/vcprompt/archive/tip.tar.gz && tar -xvf tip.tar.gz
-# system-check: ensure something sensible comes out
-type -p autoconf
-cd vcprompt* &&
+sudo apt-get install build-essential checkinstall colordiff &&
+
+    # Unpack my bag o scripts:
+    git clone http://github.com/jzacsh/bin && mkdir bin/local
+    mkdir -p tmp/{build,src} && pushd tmp/build
+    curl -O http://hg.gerg.ca/vcprompt/archive/tip.tar.gz && tar -xvf tip.tar.gz
+
+    # system-check: ensure something sensible comes out
+    type -p autoconf &&
+    cd vcprompt* &&
     autoconf &&
     ./configure &&
     make &&
     mv -v vcprompt ~/bin/local
-cp -v back/dots/user-dirs.dirs .
+
 echo 'WARNING: watch this output and delete old versions of these!!'
 while read line ; do
   [[ $line =~ ^XDG ]] && mkdir -p "${line/XDG*=/}"
-done < user-dirs.dirs
+done < back/dots/user-dirs.dirs
 
 # Unpack my bag o dots:
 mkdir -p back/dots && \
