point to new debian-laptop setup

--- a/readme
+++ b/readme
@@ -1,1 +1,4 @@
 this "dot" directory holds .config files to be used across machines
+
+For setup, see README in
+  https://gist.github.com/21ff8a17e041f8c91009e6f07c675070
